[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/drawersketch30.tres" type="DynamicFont" id=1]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/ShopProcessing.gd" type="Script" id=4]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=7]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=8]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=9]
[ext_resource path="res://Icons/Chode.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=11]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="FullMenu"]
visible = false
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 474.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
text = "%Shop Name%"
align = 1
valign = 1

[node name="Space" type="Label" parent="FullMenu/Header"]
margin_left = 478.0
margin_right = 669.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="Buy" parent="FullMenu/Header" instance=ExtResource( 11 )]
margin_left = 673.0
margin_right = 864.0
margin_bottom = 82.0

[node name="Sell" parent="FullMenu/Header" instance=ExtResource( 11 )]
margin_left = 868.0
margin_right = 1059.0
margin_bottom = 82.0

[node name="Exit" parent="FullMenu/Header" instance=ExtResource( 11 )]
margin_left = 1063.0
margin_right = 1254.0
margin_bottom = 82.0

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1258.0
margin_right = 1278.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CategoryPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 199.0
margin_bottom = 610.0
rect_min_size = Vector2( 175, 192 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Weapons" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_right = 175.0
margin_bottom = 118.0

[node name="Armor" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 122.0
margin_right = 175.0
margin_bottom = 240.0

[node name="Consumable" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 244.0
margin_right = 175.0
margin_bottom = 362.0

[node name="Quest Items" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 366.0
margin_right = 175.0
margin_bottom = 484.0

[node name="Currency" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_top = 488.0
margin_right = 175.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
color = Color( 0, 0, 0, 1 )

[node name="Currency" type="HBoxContainer" parent="FullMenu/TabsContainer/CategoryPanel/Currency"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyIcon" type="TextureRect" parent="FullMenu/TabsContainer/CategoryPanel/Currency/Currency"]
margin_right = 39.0
margin_bottom = 122.0
size_flags_horizontal = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyDisplay" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Currency/Currency"]
margin_left = 43.0
margin_right = 175.0
margin_bottom = 122.0
size_flags_vertical = 3
text = "%Chode% "
align = 1
valign = 1

[node name="Weapons" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 203.0
margin_right = 738.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Weapons"]
margin_right = 500.0
margin_bottom = 610.0
rect_min_size = Vector2( 500, 0 )
size_flags_vertical = 3

[node name="Armor" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 263.0
margin_right = 417.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Armor"]
margin_right = 154.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Crafting" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 315.0
margin_right = 504.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Crafting"]
margin_right = 189.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Consumable" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 203.0
margin_right = 738.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Consumable"]
margin_right = 535.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quest_Items" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 548.0
margin_right = 892.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Quest_Items"]
margin_right = 344.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 203.0
margin_right = 213.0
margin_bottom = 610.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="ItemInspector" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 217.0
margin_right = 717.0
margin_bottom = 610.0
rect_min_size = Vector2( 500, 0 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Inspector_Container" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector"]
margin_right = 500.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_right = 500.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 8 )
align = 1
valign = 1

[node name="ItemDescription" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 45.0
margin_right = 500.0
margin_bottom = 79.0
size_flags_vertical = 1
theme = ExtResource( 2 )
autowrap = true

[node name="SpaceBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_left = 250.0
margin_top = 83.0
margin_right = 250.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="ItemStats" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 121.0
margin_right = 500.0
margin_bottom = 568.0
size_flags_vertical = 3

[node name="StatsContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
margin_right = 500.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats/StatsContainer"]
margin_right = 500.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="ItemIcon" type="TextureRect" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
visible = false
margin_left = 230.0
margin_right = 300.0
margin_bottom = 479.0
rect_min_size = Vector2( 70, 70 )
expand = true

[node name="LabelBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 572.0
margin_right = 500.0
margin_bottom = 586.0

[node name="Label" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 590.0
margin_right = 500.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 20 )

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 721.0
margin_right = 741.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1
